fix the overflow of the badge input field for project items

--- a/src/django_resume/static/django_resume/css/styles.css
+++ b/src/django_resume/static/django_resume/css/styles.css
@@ -450,3 +450,8 @@ section {
 .cover-avatar-image {
     width: 100%;
 }
+
+.small-input {
+    min-width: 10px;
+    max-width: 20ch;
+}
